# LLM-Agent-Sandbox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: env.py  llm.py  main.py  models.py  visibility.py
app/static/: index.html
documentation/: Backend Walkthrough.md  Design Writeup.md
sample_data/: labeled_cases.json
scripts/: eval_pipeline.py  run_server.py
tests/: test_answers.py
